spacing issues

--- a/CSS/style.scss
+++ b/CSS/style.scss
@@ -64,7 +64,9 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	// border: 5px solid red;
 }
 
-
+.entities{
+	filter: drop-shadow(0 0 10px #fff3);
+}
 
 
 
